--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
-       
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta http-equiv="X-UA-Compatible" content="IE=7" />
         <link href="css/all.min.css" rel="stylesheet">
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/index.css" rel="stylesheet">
@@ -42,8 +45,8 @@
     </div>
             </div>
 </div>
-<div class="container pt-5">
-    <div class="row  gy-3 "  id="display2">
+<div class="container pt-5 ">
+    <div class="row  gy-3 ms-5"  id="display2">
    
    
     </div>
